@@ -17,6 +17,8 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.UUID;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -75,18 +77,21 @@ public class BasicArticleStorageService implements ArticleStorageService {
     String bucket = s3Properties.bucket();
     List<Article> missingArticlesTotal = new ArrayList<>();
 
-    // 날짜 사이에 있는 모든 Article url fetch
+    // 날짜 사이에 있는 모든 Article url fetch (non-deleted)
     Set<String> existingArticleUrls = articleRepository.findArticleUrlsBetweenDates(
         from.atStartOfDay(), // 하루 시작
         to.plusDays(1).atStartOfDay() // 다음날 하루 시작
     );
+    log.info("[뉴스 기사 복구] 기간: {} ~ {}. repository에 저장된 기사 url들: {}",
+        from, to, existingArticleUrls);
     log.info("[뉴스 기사 복구] S3로부터 뉴스 기사 복구 시작. 기간: {} ~ {}", from, to);
 
     // from, to 사이에 있는 날짜 루프
     for (LocalDate date = from; !date.isAfter(to); date = date.plusDays(1)) {
       List<Article> articlesFromS3 = new ArrayList<>();
       String prefix = String.format(
-          "articles-%s/",
+//          "test-articles-%s/", // local
+          "articles-%s/", // prod
           date.format(DateTimeFormatter.ISO_LOCAL_DATE)
       );
 
@@ -137,11 +142,44 @@ public class BasicArticleStorageService implements ArticleStorageService {
       return new ArticleRestoreResultDto(LocalDateTime.now(), new ArrayList<>(), 0);
     }
 
-    articleRepository.saveAll(missingArticlesTotal);
+//    missingArticlesTotal.forEach(Article::setIdToNull);
+
+    List<Article> articlesToUndelete = new ArrayList<>();
+    List<Article> articlesToInsert = new ArrayList<>();
+
+    for (Article a : missingArticlesTotal) {
+      // soft delete
+      if (a.getDeletedAt() != null) { // if by the time of backup, the article is soft deleted
+        a.setDeletedAt(null);
+        articlesToUndelete.add(a);
+      } else { // hard delete
+        a.setIdToNull();
+        articlesToInsert.add(a);
+      }
+    }
+
+    if (!articlesToUndelete.isEmpty()) { //update
+      articleRepository.saveAll(articlesToUndelete);
+      log.info("[뉴스 기사 복구] 총 {}개의 소프트 삭제된 기사를 복구했습니다.", articlesToUndelete.size());
+    }
+    if (!articlesToInsert.isEmpty()) { //insert
+      articleRepository.saveAll(articlesToInsert);
+      log.info("[뉴스 기사 복구] 총 {}개의 새로운 기사를 DB에 저장했습니다.", articlesToInsert.size());
+    }
+
+//    articleRepository.saveAll(missingArticlesTotal);
+
     log.info("[뉴스 기사 복구] 총 {}개의 뉴스 기사를 DB에 저장했습니다.", missingArticlesTotal.size());
-    List<UUID> savedArticleIdsTotal = missingArticlesTotal.stream()
-        .map(BaseEntity::getId)
-        .toList();
+//    List<UUID> savedArticleIdsTotal = missingArticlesTotal.stream()
+//        .map(BaseEntity::getId)
+//        .toList();
+
+    List<UUID> savedArticleIdsTotal = Stream.concat(
+            articlesToInsert.stream().map(Article::getId),
+            articlesToUndelete.stream().map(Article::getId)
+        )
+        .collect(Collectors.toList());
+
     log.info("[뉴스 기사 복구] 총 {}개의 뉴스 기사 복구 완료.기간: {} ~ {}", savedArticleIdsTotal.size(), from, to);
     return new ArticleRestoreResultDto(
         LocalDateTime.now(),
